# model-zoo

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
model_zoo/: utils.py
model_zoo/autoregressive/: helper.py  models.py
model_zoo/linear/: linear_regression.py
model_zoo/pca/: pca.py
model_zoo/vae/: models.py  vae.py
scripts/: train_gpt.py  train_vae.py
tests/: test_linear.py  test_pca.py
